scripts/nullaway/annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8.txt
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/utility/map/Map.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/WorldGenerationMap.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields map_ (line 9), elevation_algo_ (line 11), rainfall_algo_ (line 12), temperature_algo_ (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public WorldGenerationMap(MapType type, int width, int height)
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcb11f5f67_Orchaldir_FantasyWorldSimulation_tgz-pJ8-fws_worldeditor_WorldEditorJ8/src/fws/world/generation/RainShadowAlgorithm.java:23: error: [NullAway] initializer method does not guarantee @NonNull field rainfall_ (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RainShadowAlgorithm(WorldGenerationMap map, float threshold, int distance, int recharge_distance_)
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
